# whyWhale

./: CMakeLists.txt  README.md  digest_it.txt  install.ps1  main.cpp  mega-stress-test.js  package-lock.json  package.json  rename_files.bat  stress-test.js
connections/whatsapp/: README.md  aiHandler.js  dmPolicy.js  index.js  logger.js  package-lock.json  package.json
include/: ai_engine.h  code_executor.h  editor_ui.h  error_fixer.h  ollama_manager.h
lib/: colors.js  config.js  connections.js  dashboard.html  dashboard.js  filesystem.js  main.js  modes.js  providers.js  render.js  selftest.js  session-cache.js
lib/aug/: notify.js
lib/main/: aiHandler.js  autoDetect.js  commands.js  constants.js  index.js  setup.js  utils.js
lib/main/command/: ai.js  connections.js  files.js  index.js  memory.js  session.js  settings.js  shell.js  skills.js
plugins/: dispatcher.js  index.js  installer.js  loader.js  registry.js
skills/: socket.txt
skills/.cache/pdfcry/: gate.js  plug-connect.json
skills/.cache/pdfcry/pdfcry/: reader.js
skills/plugs/: howitswork.md
src/: ai_engine.cpp  code_executor.cpp  editor_ui.cpp  error_fixer.cpp  ollama_manager.cpp
